XML Parser should invoke reactions when creating/inserting new custom elements https://bugs.webkit.org/show_bug.cgi?id=188190

Reviewed by Chris Dumez.

Based on a patch written by Frédéric Wang.

Made our XML parser respect custom elements semantics. Namely, perform a microtask checkpoint before constructing
a custom element and throw exceptions in document.open, document.write, document.writeln, document.close inside
custom element constructors and reaction callbacks.

Also fixed a bug that enqueueUpgradeInShadowIncludingTreeOrder and JSCustomElementInterface::upgradeElement
were checking the identity of qualified names instead of whether they match or not (ignoring prefix string).

* LayoutTests/fast/custom-elements/perform-microtask-checkpoint-before-construction-xml-parser-expected.txt: Added.
* LayoutTests/fast/custom-elements/perform-microtask-checkpoint-before-construction-xml-parser.xhtml: Added.
* LayoutTests/fast/custom-elements/throw-on-dynamic-markup-insertion-counter-construct-xml-parser-expected.txt: Added.
* LayoutTests/fast/custom-elements/throw-on-dynamic-markup-insertion-counter-construct-xml-parser.xhtml: Added.
* LayoutTests/fast/custom-elements/throw-on-dynamic-markup-insertion-counter-reactions-xml-parser-expected.txt: Added.
* LayoutTests/fast/custom-elements/throw-on-dynamic-markup-insertion-counter-reactions-xml-parser.xhtml: Added.
* LayoutTests/imported/w3c/web-platform-tests/shadow-dom/innerHTML-setter-expected.txt:
* LayoutTests/platform/win/TestExpectations:

* Source/WebCore/bindings/js/JSCustomElementInterface.cpp:
(WebCore::JSCustomElementInterface::upgradeElement):
* Source/WebCore/dom/CustomElementRegistry.cpp:
(WebCore::enqueueUpgradeInShadowIncludingTreeOrder):
* Source/WebCore/xml/parser/XMLDocumentParserLibxml2.cpp:
(WebCore::XMLDocumentParser::startElementNs):

Canonical link: https://commits.webkit.org/253122@main